[AAE-0000] - COUNT POC